services/monitoring/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: prometheus-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.durbin.casa
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: 'prometheus.durbin.casa'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: prometheus-k8s
                port:
                  name: web
  tls:
    - hosts:
        - prometheus.durbin.casa
      secretName: prometheus-ingress-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.durbin.casa
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: 'grafana.durbin.casa'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: grafana
                port:
                  name: http
  tls:
    - hosts:
        - grafana.durbin.casa
      secretName: grafana-ingress-cert
